<resources>
    <string name="app_name">SKEDULR</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="icon">icon</string>
    <string name="welcome_login">Welcome!</string>
    <string name="manager_button">manager</string>
    <string name="employee_button">employee</string>
    <string name="manager_or_employee">Are you a...</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="user123">user123</string>
    <string name="view_schedule">View Schedule</string>
    <string name="my_schedule">My Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="week_1">Week 1</string>
    <string name="notifications">Notifications</string>
    <string name="messaging">Messaging</string>
    <string name="message">Message</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="time_scheduled">Time scheduled</string>
    <string name="change_your_availability">Change Your Availability</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="switch_schedules">Switch Schedules</string>
    <string name="request_days_off">Request Days Off</string>
    <string name="switching_from">Switching from:</string>
    <string name="day">Day</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="schedule_requests">Schedule Requests</string>
    <string name="view_my_schedule">View My Schedule</string>
    <string name="change_availability">Change Availability</string>
    <string name="view_breakdown">View Breakdown</string>
    <string name="auto_schedule_employees">Auto-Schedule Employees</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="view_requests">View Requests</string>
    <string name="select_day_off">Select Day Off</string>
    <string name="select_time">Select Time</string>
    <string name="breakdown">Breakdown</string>
    <string name="resetpass">Reset Employee Password</string>
    <string name="forgotpass">Forgot Your Password?</string>
</resources>
