<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeSchedule">

    <TextView
        android:id="@+id/headingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/change_your_availability"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/changeschedIcon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toEndOf="@+id/headingText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/changeavailability" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="366dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingText"
        app:layout_constraintVertical_bias="0.047">

        <TableRow
            android:id="@+id/Bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/days"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/day_of_the_week"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeStart"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/time_start"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeEnd"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/time_end"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Sunday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/sun"
                android:text="@string/sunday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sunStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sunEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

        </TableRow>


        <TableRow
            android:id="@+id/Monday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/mon"
                android:text="@string/monday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/monStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/monEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Tuesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tues"
                android:text="@string/tuesday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tuesStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tuesEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:id="@+id/Wednesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/wed"
                android:text="@string/wednesday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/wedStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/wedEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:id="@+id/Thursday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/thurs"
                android:text="@string/thursday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/thursStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/thursEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:id="@+id/Friday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/fri"
                android:text="@string/friday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/friStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/friEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:id="@+id/Saturday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/sat"
                android:text="@string/saturday"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/satStart"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/satEnd"
                android:ems="5"
                android:inputType="time"
                android:textSize="16sp" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="101dp"
        android:layout_height="57dp"
        android:background="@color/yellow"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.428" />
</androidx.constraintlayout.widget.ConstraintLayout>