<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaysoffRequest">


    <TextView
        android:id="@+id/daysofftext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/request_days_off"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/scheduleIcon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/daysofftext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        app:srcCompat="@drawable/dayoff" />


    <Button
        android:id="@+id/selectOffButton"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginBottom="408dp"
        android:background="@color/blue"
        android:text="@string/select_day_off"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysofftext"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/submitDaysOffButton"
        android:layout_width="101dp"
        android:layout_height="57dp"
        android:layout_marginBottom="380dp"
        android:background="@color/yellow"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
